# wordle-cli

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
data/: words.json
src/: error.rs  main.rs  ui.rs
