[package]
name = "wordle-cli"
version = "0.1.0"
edition = "2021"
authors = ["Sujal Bolia <sujalbolia@gmail.com>"]
license = "MIT/Apache-2.0"
description = "wordle-cli (wrdl) is a terminal-based game of Wordle"
homepage = "https://github.com/nextonesfaster/wordle-cli"
repository = "https://github.com/nextonesfaster/wordle-cli"
keywords = ["wordle", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "wrdl"
path = "src/main.rs"

[dependencies]
termcolor = "1.1.3"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tui = "0.19.0"
crossterm = "0.25.0"
unicode-width = "0.1.10"
dirs-next = "2.0.0"
arboard = "3.2.0"
